@@ -17250,8 +17250,8 @@
   (c-name "gtk_tree_model_sort_new_with_model")
   (is-constructor-of "GtkTreeModelSort")
   (return-type "GtkTreeModel*")
-  (parameters
-    '("GtkTreeModel*" "child_model")
+  (properties
+    '("model" (argname "child_model"))
   )
 )
 
