@@ -1,3 +1,15 @@
+2004-07-08  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
+
+	* gtk/gtk.defs (gtk_tree_model_sort_new_with_model): Change to
+	property based constructor.
+
+	* codegen/codegen.py (GObjectWrapper.write_property_based_constructor):
+	Handle propname != argname cases.
+
+	* codegen/definitions.py (FunctionDef.__init__): Parse (argname
+	"xxx") inside properties list, to support argname != propname.
+	(Property.__init__): Accept new argname parameter.
+
 2004-07-07  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
 
 	* codegen/definitions.py (FunctionDef.write_defs): Handle new
